force-app/main/default/objects/Admission__c/Admission__c.object-meta.xml
<CustomObject>
    <label>Admission</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Admission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>