force-app/main/default/objects/Admission__c/fields/Course_Details__c.field-meta.xml
<CustomField>
    <fullName>Course_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Details</label>
    <referenceTo>Course_Details__c</referenceTo>
    <relationshipLabel>Admissions</relationshipLabel>
    <relationshipName>Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>