force-app/main/default/objects/Admission__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Name</label>
    <referenceTo>Course_Details__c</referenceTo>
    <relationshipLabel>Admissions (Course Name)</relationshipLabel>
    <relationshipName>Admissions1</relationshipName>
    <type>Lookup</type>
</CustomField>