force-app/main/default/objects/Admission__c/fields/DOJ__c.field-meta.xml
<CustomField>
    <fullName>DOJ__c</fullName>
    <label>DOJ</label>
    <required>true</required>
    <type>Date</type>
</CustomField>