force-app/main/default/objects/Admission__c/fields/Formula_for_Serial_Num__c.field-meta.xml
<CustomField>
    <fullName>Formula_for_Serial_Num__c</fullName>
    <formula>LEFT( CreatedBy.FirstName , 1) +
LEFT( CreatedBy.LastName , 1) + &quot; : &quot; +
S_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula for Serial Num</label>
    <type>Text</type>
</CustomField>