force-app/main/default/objects/Admission__c/fields/Full_Discount__c.field-meta.xml
<CustomField>
    <fullName>Full_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Discount</label>
    <type>Checkbox</type>
</CustomField>