force-app/main/default/objects/Admission__c/fields/Half_Discount__c.field-meta.xml
<CustomField>
    <fullName>Half_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Half Discount</label>
    <type>Checkbox</type>
</CustomField>