force-app/main/default/objects/Admission__c/fields/Offer_Available__c.field-meta.xml
<CustomField>
    <fullName>Offer_Available__c</fullName>
    <formula>IF(AND( DOJ__c  &gt;=  Offer_Start_Date__c,DOJ__c &lt;=  Offer_End_Date__c)   ,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Available</label>
    <type>Checkbox</type>
</CustomField>