force-app/main/default/objects/Admission__c/fields/Offer_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Start_Date__c</fullName>
    <label>Offer Start Date</label>
    <type>Date</type>
</CustomField>