force-app/main/default/objects/Admission__c/fields/Percent_of_Marks__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Marks__c</fullName>
    <label>% of Marks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>