force-app/main/default/objects/Admission__c/fields/Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Qualifications__c</fullName>
    <label>Qualifications</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.Tech</fullName>
            </value>
            <value>
                <fullName>B.sc</fullName>
            </value>
            <value>
                <fullName>M.sc</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>