force-app/main/default/objects/Admission__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reservation</label>
    <type>Checkbox</type>
</CustomField>