force-app/main/default/objects/Admission__c/fields/S_No__c.field-meta.xml
<CustomField>
    <fullName>S_No__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>S.No</label>
    <type>AutoNumber</type>
</CustomField>