force-app/main/default/objects/Admission__c/fields/Upcoming_DOB__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_DOB__c</fullName>
    <formula>IF(DATE(YEAR(Today()), MONTH( DOB__c ),DAY(DOB__c)) &gt; Today(), DATE(YEAR(Today()), MONTH( DOB__c ),DAY(DOB__c)), DATE(YEAR(Today())+1, MONTH( DOB__c ),DAY(DOB__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upcoming DOB</label>
    <type>Date</type>
</CustomField>