force-app/main/default/objects/Admission__c/validationRules/Both_Discounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Both_Discounts</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Full_Discount__c = True &amp;&amp; Half_Discount__c = true)</errorConditionFormula>
    <errorMessage>Please ensure that you cannot check both the discounts</errorMessage>
</ValidationRule>