force-app/main/default/objects/Admission__c/validationRules/Offer_Availability.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_Availability</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Offer_Available__c = False &amp;&amp; Full_Discount__c = True || Offer_Available__c = False &amp;&amp; Half_Discount__c = True)</errorConditionFormula>
    <errorMessage>You cannot Check the Type of discount since there is no offer Available for this candidate</errorMessage>
</ValidationRule>