force-app/main/default/objects/Admission__c/validationRules/Type_of_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_of_Discount</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Offer_Available__c = True &amp;&amp; Full_Discount__c = False &amp;&amp; Half_Discount__c = False)</errorConditionFormula>
    <errorMessage>Please ensure to check the type of Discount</errorMessage>
</ValidationRule>