force-app/main/default/objects/Admission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Student_Email__c</columns>
    <columns>Father_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>