force-app/main/default/objects/Admission__c/listViews/List_by_Admission_Number.listView-meta.xml
<ListView>
    <fullName>List_by_Admission_Number</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
    </filters>
    <label>List by Admission Number</label>
</ListView>